# Kaizen

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.claude/agents/: agent-engineer.md  backend-engineer.md  code-reviewer.md  eval-engineer.md  frontend-engineer.md  rag-engineer.md
.codex/: config.toml
.codex/agents/: code-mapper.toml  code-reviewer.toml
alembic/: env.py
alembic/versions/: 08d2dfcf2870_initial_logs_table.py  a1b2c3d4e5f6_add_extracted_facts_table.py  a7b8c9d0e1f2_add_habit_command_flows_table.py  b2c3d4e5f6a7_add_corpus_chunks_table.py  c3d4e5f6a7b8_add_gamification_tables.py  d4e5f6a7b8c9_add_interventions_table.py  e5f6a7b8c9d0_add_habit_plan_tables.py  f6a7b8c9d0e1_add_habit_evidence_overrides_table.py
app/: config.py  dashboard.py  main.py
app/agent/: graph.py  (+5 more)
corpus/: commitment_devices.md  environment_design.md  friction_reduction.md  habit_stacking.md  identity_based_habits.md  if_then_planning.md  implementation_intentions.md  motivation_wave.md  progress_tracking.md  relapse_recovery.md  reward_substitution.md  self_compassion_after_failure.md  temptation_bundling.md  two_minute_rule.md  urge_surfing.md
docs/: CONTEXT.md  DEPLOYMENT.md  LLM-ROUTING.md  MILESTONE-AUDIT.md  ONBOARDING.md  PRODUCT.md
evals/: RESULTS.md  golden.py  judge.py  retrieval.py  runner.py
scripts/: aws-ec2-bootstrap.sh  deploy-build.sh  render-build.sh
tests/: conftest.py  test_config.py  test_dashboard.py  test_webhook.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
(+97 files in other folders)
